@@ -107,7 +107,6 @@ $shades = array(
 
 // assign variables to the theme
 $cms->theme->assign(array(
-	'page'			=> basename(__FILE__,'.php'),
 	'awards'		=> $awards,
 	'language_list'	=> $cms->theme->get_language_list(),
 	'theme_list'	=> $cms->theme->get_theme_list(),
