@@ -11,11 +11,11 @@ flags_url = "{$conf.theme.flags_url}";
 <div id="ps-main">
 
 <!--content block-->
-<div id="ps-main-content" class="ps-page-{$page}">
+<div id="ps-main-content" class="ps-page-{$basename}">
 
 {$message}
 
-<div class="ps-form-container" id="ps-{$page}-form">
+<div class="ps-form-container" id="ps-{$basename}-form">
 <div class="ps-form">
 <form method="post" action="{$SELF}">
 <fieldset>
