@@ -47,7 +47,7 @@
 <!--end of left column -->
 
 <!--content block-->
-<div id="ps-main-content" class="ps-page-{$page}">
+<div id="ps-main-content" class="ps-page-{$basename}">
 
 
 <div id="ps-help-frame">
