@@ -117,6 +117,7 @@ Version 0.0.4b (in progress)
 * [Improved] Maintenance mode now displays the stats to admins with a status note.
 * [Fixed] Incorrect script names in errors.
 * [Improved] Replaced $oscript with $basename.
+* [Improved] Replaced $page Smarty variable with $basename.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
